@@ -2212,6 +2212,17 @@
       </component>
     </version>
   </module>
+  <module name="NetworkManager">
+    <version release="gnome-2.8">
+      <component name="NetworkManager" dir="NetworkManager" group="extras">
+        <podir dir="po"/>
+        <potname name="NetworkManager.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="planner">
     <version release="gnome-2.8">
       <component name="planner" dir="planner" group="office">
